--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
         <!-- Security Dependencies End -->
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>spring-mock-mvc</artifactId>
             <version>3.3.0</version>
